[project]
name = "testing"
version = "0.1.0"
description = ""
authors = [
    {name = "Omar",email = "omar.umirzakov07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "uvicorn (>=0.49.0,<0.50.0)"
]

[tool.poetry]
packages = [{include = "testing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
